# Triglav

./: .gitignore  README.md  TriglavMS.txt  environment.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml  draft-pdf.yml
docs/: API.md  CONTRIBUTING.md
mECFS/: __init__.py  mECFS.py
notebooks/: 01_random_dataset.ipynb  README.md
notebooks/Diseased Gut Analysis/: 16S_CD_microbiome.ipynb  16S_CD_stability.ipynb  16S_end_to_end.ipynb
notebooks/Diseased-Gut-Analysis/: 16S_CD_stability.ipynb  16S_Test_PSO_CLR.ipynb  16S_Test_PSO_PA.ipynb  16S_end_to_end.ipynb  stability.py
paper/: paper.bib  paper.md
tests/: __init__.py  test.py  test_triglav.py
tests/data/: expected_output.csv
triglav/: __init__.py  triglav.py
