[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "triglav"
version = "1.2.0"
authors = [
    {name = "Josip Rudar", email = "joe.rudar@inspection.gc.ca"},
    {name = "Peter Kruczkiewicz"},
    {name = "G. Brian Golding"},
    {name = "Oliver Lung"},
    {name = "Mehrdad Hajibabaei", email = "mhajibab@uoguelph.ca"}
]
description = "Triglav: Iterative Refinement and Selection of Stable Features Using Shapley Values"
keywords = [
    "ecology",
    "multivariate statistics",
    "feature selection",
    "stability selection"
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "matplotlib >= 3.7.1",
    "numpy == 1.23.5",
    "scikit-learn >= 1.3.1",
    "statsmodels >= 0.12.0",
    "shap >= 0.41.0",
    "scipy >= 1.10.1",
    "joblib >= 1.3.1",
    "imbalanced-learn >= 0.11.0",
    "mealpy >= 2.5.4",
    "umap-learn >= 0.5.4",
    "scikit-bio >= 0.5.8",
    "skrebate >= 0.62"
]

[project.urls]
"Homepage" = "https://github.com/jrudar/Triglav"
"Repository" = "https://github.com/jrudar/Triglav.git"
"Bug Tracker" = "https://github.com/jrudar/Triglav/issues"

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "ruff",
    "twine",
]

test = [
    "pytest",
    "pytest-cov"
]

[tool.pytest.ini_options]
addopts = "--cov --cov-report html --cov-report term-missing --cov-fail-under 65"

[tool.coverage.run]
source = ["triglav"]
